fix safari image stretch issue

--- a/frontend/src/styles/_content.scss
+++ b/frontend/src/styles/_content.scss
@@ -25,6 +25,7 @@
     display: flex;
     justify-content: space-between;
     flex-direction: column;
+    align-items: flex-start;
 
     @media (min-width: 460px) {
       flex-direction: row;
