--- a/frontend/src/styles/styles.css
+++ b/frontend/src/styles/styles.css
@@ -2996,7 +2996,8 @@ a.item {
 .content .images {
   display: flex;
   justify-content: space-between;
-  flex-direction: column; }
+  flex-direction: column;
+  align-items: flex-start; }
   @media (min-width: 460px) {
     .content .images {
       flex-direction: row; }
